# kin

./: .env.example  .gitignore  AGENTS.md  DEMO_RUNBOOK.md  README.md  pyproject.toml  requirements.txt
agents/kin_doctor/: agent.py
agents/kin_logistics/: agent.py
agents/kin_translator/: agent.py
agents/kin_triage/: agent.py
agents/kin_vault/: agent.py
agents/swarm_caller/: agent.py  uagent_runner.py
agents/swarm_finder/: __init__.py  agent.py  uagent_runner.py
agents/swarm_fingerprint/: agent.py  uagent_runner.py
agents/swarm_intake/: agent.py  uagent_runner.py
agents/swarm_matcher/: agent.py  uagent_runner.py
agents/swarm_profiler/: agent.py  uagent_runner.py
common/: asi.py  audio_prep.py  geo.py  medical.py  patient_cache.py  patient_view.py  telemetry.py  transcript_store.py
dashboard_relay/: main.py
healthswarm-dashboard/: package-lock.json  package.json  tailwind.config.ts
healthswarm-dashboard/app/: globals.css  layout.tsx  page.tsx
healthswarm-dashboard/app/components/: app-bar.tsx  (+8 more)
healthswarm-omegaclaw-skill/: SKILL.md  skills.metta.snippet
healthswarm-omegaclaw-skill/agentverse/: healthswarm_skill.py
scripts/: demo_rehearsal.py  health.sh  ingest_clinics.py  ingest_rxnorm.py  init_medical_records.py  inspect_db.py  migrate_v2.py  profile_patient.py  seed_clinic_insurance.py  seed_insurance_companies.py  seed_patients.py  setup_omegaclaw.sh  sim_swarm.py
voice_gateway/: agent_config.py  booking_agent.py  confirmation.py  conversation.py  eleven_caller.py  main.py  mock_main.py  tools.py  tts.py
vultr/: gemma_server.py
(+8 files in other folders)
